# bot_translator

./: .gitignore  README.md  config.py  db.sqlite  keyboard.py  main.py  main_deepl.py  test.py
translator/: Dockerfile  config.py  db.sqlite  docker-compose.yml  main.py  pyproject.toml  requirements.txt
