[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Mikhail <mishatar2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
googletrans-py = "^4.0.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
aiogram = "^2.25.1"
googletrans-py = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
